# ng-to-verilog

./: .gitignore  LICENSE  MANIFEST.in  NgToVerilog.py  README.md  pyproject.toml  requirements.txt  setup.py
ng_to_verilog/: export.py  load.py  util.py
ng_to_verilog/resources/: primitives.json
resources/: nandgame_export.json
samples/: NgToVerilog.py
samples/resources/: nandgame_export.json
samples/verilog/: ADDC16.v  AND.v  AND16.v  BUNDLE16.v  CLOCK.v  COUNTER.v  DFF.v  DFF16.v  INC16.v  INV.v  INV16.v  LATCH.v  MrComputer_Constraints.xdc  NAND.v  OR.v  OR16.v  RAM16.v  ROM.v  SELECT16.v  SPLIT16.v  SPLIT22.v  SUB16.v  XOR16.v  ZERO.v  ZERO16.v  _2to4decoder.v  _3to8decoder.v  _8to18bitmux.v  _nor.v  and3.v  buildmrcomputer_tb.cmd  mraddressbus.v  mralu.v  mrarithmeticunit.v  mrcomputer.v  mrcomputer_tb.v  mrcomputer_tb.vcd  mrcomputer_tb.vvp  mrcontrolunit.v  mrdatabus.v  (+14 more)
src/ng_to_verilog/: __init__.py  export.py  load.py  pins_ports_io.py  primitives.py  settings.py  util.py
src/ng_to_verilog/resources/: primitives.json
src/ng_to_verilog/templates/: build.j2  verilogModule.j2
tests/: context.py  load_test.py  test_export.py  test_load.py  test_pins_ports_io.py  test_primitives.py  test_settings.py  test_util.py
