[tool.poetry]
name = "ng-to-verilog"
version = "2024.08.0"
description = "Nandgame to Verilog"
authors = ["Patrick Cox <patrick.cox@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xocp/ng-to-verilog" 
keywords = ["nandgame", "verilog"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.10"
jinja2 = "3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"
